--- a/First_page_html_js_css/index.html
+++ b/First_page_html_js_css/index.html
@@ -70,9 +70,13 @@
             <li> Для совершенствоания процессов через обучение</li>
             <li> Для эволюции сознания</li>
         </ul>
-
     </section>
 
+    <form action="login.php" method="POST">
+        <p>Имя: <input type="text" name="name" /></p>
+        <p>Возраст: <input type="number" name="age" /></p>
+        <input type="submit" value="Отправить">
+    </form>
     <footer>
 
     </footer>
