Update_Sem_5_JS

--- a/First_page_html_js_css/index.html
+++ b/First_page_html_js_css/index.html
@@ -77,17 +77,23 @@
         <p>Возраст: <input type="number" name="age" /></p>
         <input type="submit" value="Отправить">
     </form>
+
+    <section id="users" class="sectionUser">
+
+    </section>
+
     <footer>
 
     </footer>
 
-    <script>
+    <!-- <script>
     // let element2 = document.getElementById("el");
     // console.log(element2);
-    </script>
-    <script src="./scripts/script.js">
-    </script>
+    </script> -->
 
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/getscripts.js"></script>
+    <script src="./scripts/postScript.js"></script>
 </body>
 
 </html>
